# gtm-agent

./: .gitignore  README.md  agents.md  input.md  pyproject.toml
.claude/skills/gtm-analyze/: SKILL.md
backend/: agent.py  evaluator.py  llm.py  main.py  pipeline.py  run_cascade.py  run_pipeline.py  schemas.py  threads.py
backend/modules/: audience.py  competitive.py  positioning.py  swot.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Canvas.tsx  ChatPanel.tsx  EntityPopover.tsx  InputPanel.tsx  ModuleCard.tsx  ModuleDetail.tsx  SettingsModal.tsx  moduleShared.tsx
inputs/: input-moonhaven.md
output/: _threads.json  audienceOverview.json  competitiveLandscape.json  positioningMatrix.json  swot.json
output/input/: _changes.json  _quality.json  _versions.json  audienceOverview.json  competitiveLandscape.json  positioningMatrix.json  swot.json
output/input-moonhaven/: _changes.json  audienceOverview.json  competitiveLandscape.json  positioningMatrix.json  swot.json
output/input-stardew-like/: _changes.json  audienceOverview.json  competitiveLandscape.json  positioningMatrix.json  swot.json
tests/: test_orchestration.py  test_security.py  test_system.py
