[project]
name = "gtm-agent"
version = "0.1.0"
description = "Go-To-Market analysis agent for indie game publishers"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
